# dlalternative

./: app.py  cache_manager.py  pyproject.toml
static/css/: style.css
static/js/: main.js
templates/: index.html
